# Qt5-template

./: .gitignore  CMakeLists.txt  NOTICE  README.md
lib/verdigris/: LICENSE  wobjectdefs.h  wobjectimpl.h
src/: main.cpp
